test/invalid/new.js
function Constr(x) { this.bla = x; }
var constr = new Constr(2);
//constr.another = 2;
return constr;
